fix(table): toggle button hover visibility
affects: @synerise/ds-table

--- a/packages/components/table/src/style/table.less
+++ b/packages/components/table/src/style/table.less
@@ -262,12 +262,7 @@
 
       &:not(.@{table-prefix-cls}-column-sort) {
         .@{table-prefix-cls}-column-sorter {
-          opacity: 0;
-        }
-        &:hover {
-          .@{table-prefix-cls}-column-sorter {
-            opacity: 1;
-          }
+          margin-left: 8px;
         }
       }
 
